Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntObjObjectField.quorum
class Main
    Integer v = Test()
    action Main
    end

    action Test() returns Integer
        Object var
        return var
    end
end